--- a/styles/timeline.css
+++ b/styles/timeline.css
@@ -8,9 +8,7 @@
 
   .title {
     text-align: center;
-    font-size: 2rem;
     margin-bottom: 2rem;
-    font-weight: 400;
   }
 
   .tabs {
